add menu items.

--- a/src/app/layouts/sidebar/sidebar.component.html
+++ b/src/app/layouts/sidebar/sidebar.component.html
@@ -1,3 +1,10 @@
-<p>
-  <yeast-icon>abc</yeast-icon> sidebar works2!2
-</p>
+<div id="logo">
+  <app-menu-item>Ant Design Pro</app-menu-item>
+</div>
+<div id="menu">
+  <ul class="menu">
+    <app-menu-item></app-menu-item>
+    <app-menu-item></app-menu-item>
+    <app-menu-item></app-menu-item>
+  </ul>
+</div>
