--- a/src/app/layouts/basic-layout/basic-layout.component.html
+++ b/src/app/layouts/basic-layout/basic-layout.component.html
@@ -1,7 +1,13 @@
 <section class="basic-layout-root">
   <aside class="basic-layout-left"></aside>
   <section class="basic-layout-right">
-    <header class="basic-layout-header"></header>
+    <header class="basic-layout-header">
+      <div><span class="material-icons">view_headline</span></div>
+      <div style="flex: 1;"></div>
+      <div class="header-right-toolbar">
+        <div><span class="material-icons-outlined toolbar-icon">notifications</span></div>
+      </div>
+    </header>
     <div class="basic-layout-content" style="min-height: 600px;">
       <router-outlet style="height: 100%;"></router-outlet>
     </div>
