--- a/src/app/layouts/basic-layout/basic-layout.component.scss
+++ b/src/app/layouts/basic-layout/basic-layout.component.scss
@@ -25,6 +25,20 @@
   display: flex;
   flex-direction: row;
   background-color: #189077;
+
+  padding: 8px;
+  span {
+    font-size: 48px;
+  }
+}
+
+.header-right-toolbar {
+  display: flex;
+  flex-direction: row;
+}
+
+.toolbar-icon {
+  color: rgba(0, 40, 250, 0.2);
 }
 
 .basic-layout-footer  {
