--- a/src/app/layouts/basic-layout/basic-layout.component.html
+++ b/src/app/layouts/basic-layout/basic-layout.component.html
@@ -1,5 +1,22 @@
 <section class="basic-layout-root">
-  <aside class="basic-layout-left" [class.collapsed]="collapsed"></aside>
+  <aside class="basic-layout-left" [class.collapsed]="collapsed">
+    <div class="logo">
+      <span class="material-icons">menu_book</span>
+      <span class="menu-text">ZNote</span>
+    </div>
+    <div class="menu-item">
+      <span class="material-icons">menu_book</span>
+      <span class="menu-text">ZNote</span>
+    </div>
+    <div class="menu-item">
+      <span class="material-icons">menu_book</span>
+      <span class="menu-text">ZNote</span>
+    </div>
+    <div class="menu-item">
+      <span class="material-icons">menu_book</span>
+      <span class="menu-text">ZNote</span>
+    </div>
+  </aside>
   <section class="basic-layout-right">
     <header class="basic-layout-header">
       <div (click)="onCollapseClick()"><span class="material-icons">view_headline</span></div>
