--- a/src/styles.scss
+++ b/src/styles.scss
@@ -16,6 +16,7 @@ html, body, #root {
 body {
   /** This is important to avoid unnecessary scrollbar */
   margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, Roboto, 'Helvetica Neue', Arial, 'Noto Sans', sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
 }
 
 
