Add service to get current router path.

--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -1,1 +1,8 @@
 <p>dashboard works!</p>
+
+
+<a routerLink="/home/dashboard" routerLinkActive="active">Home/Dashboard</a><br>
+
+<a routerLink="/home/level1/dashboard">Home/Dashboard</a><br>
+<a routerLink="/home/level1/level2/dashboard">L2 Dashboard</a><br>
+{{path | async}}
