--- a/src/app/layouts/basic-layout/basic-layout.component.html
+++ b/src/app/layouts/basic-layout/basic-layout.component.html
@@ -5,16 +5,22 @@
       <span class="menu-text">ZNote</span>
     </div>
     <div class="menu-item">
-      <span class="material-icons">menu_book</span>
-      <span class="menu-text">ZNote</span>
+      <a routerLink="/home">
+        <span class="material-icons">library_books</span>
+        <span class="menu-text">Notes</span>
+      </a>
     </div>
     <div class="menu-item">
-      <span class="material-icons">menu_book</span>
-      <span class="menu-text">ZNote</span>
+      <a routerLink="/notes/tags">
+        <span class="material-icons">label</span>
+        <span class="menu-text">Tags</span>
+      </a>
     </div>
     <div class="menu-item">
-      <span class="material-icons">menu_book</span>
-      <span class="menu-text">ZNote</span>
+      <a routerLink="/home">
+        <span class="material-icons">menu_book</span>
+        <span class="menu-text">ZNote</span>
+      </a>
     </div>
   </aside>
   <section class="basic-layout-right">
