--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -6,3 +6,5 @@
 <a routerLink="/home/level1/dashboard">Home/Dashboard</a><br>
 <a routerLink="/home/level1/level2/dashboard">L2 Dashboard</a><br>
 {{path | async}}
+
+<tag-input></tag-input>
